--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     <head>
         <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,13 +27,15 @@
             </section>
 
             <section class="icons-section">
-                <img src="images/icon-heart.png" alt="" class="icons">
-                <img src="images/icon-comment.png" alt="" class="icons">
-                <img src="images/icon-dm.png" alt="" class="icons">
+                <img src="images/icon-heart.png" alt="" class="icons" id="like-icon">
+                <img src="images/icon-comment.png" alt="" class="icons" id="comment-icon">
+                <img src="images/icon-dm.png" alt="" class="icons" id="dm-icon">
             </section>
+
             <section class="likes">
                 <p class="bold-style" id="like-el"></p>
             </section>
+            
             <section class="comments">
                 <h3 class="bold-style" id="username-el"></h3>
                 <p class="light-style" id="comment-el"></p>
